<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="81dp">

    <RelativeLayout
        android:id="@+id/rootView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background" />

        <ImageView
            android:id="@+id/image_ariana"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:alpha="0.1"
            android:src="@drawable/ariana" />

        <TextView
            android:id="@+id/textlogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/gitchgitch"
            android:text="@string/logo_name"
            android:textColor="@color/colorWhite"
            android:textSize="30dp" />

        <com.mikepenz.iconics.view.IconicsImageView
            android:layout_width="40dp"
            android:layout_marginTop="5dp"
            android:layout_centerHorizontal="true"
            app:iiv_color="@color/colorWhite"
            app:iiv_icon="faw_spotify"
            android:layout_below="@id/textlogo"
            android:layout_height="40dp" />

        <RelativeLayout
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="50dp"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/lnemail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <com.mikepenz.iconics.view.IconicsImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    app:iiv_color="@color/colorWhite"
                    app:iiv_icon="faw_user" />

                <EditText
                    android:id="@+id/tvemail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:hint="@string/email"
                    android:imeOptions="actionNext"
                    android:backgroundTint="@color/colorWhite"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorHint"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lnpassword"
                android:layout_marginTop="20dp"
                android:layout_below="@id/lnemail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <com.mikepenz.iconics.view.IconicsImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    app:iiv_color="@color/colorWhite"
                    app:iiv_icon="faw_key" />

                <EditText
                    android:id="@+id/tvpassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:hint="@string/password"
                    android:imeOptions="actionNext"
                    android:backgroundTint="@color/colorWhite"
                    android:inputType="textPassword"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorHint"
                    android:textSize="14sp" />

            </LinearLayout>

            <Button
                android:id="@+id/btlogin"
                android:layout_below="@id/lnpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@id/btsignup"
                android:layout_marginTop="50dp"
                android:background="@drawable/button_white"
                android:text="@string/Login"
                android:textAllCaps="false"
                android:textColor="@color/colorRose"
                android:textSize="12dp" />

            <TextView
                android:id="@+id/labelsocial"
                android:layout_width="wrap_content"
                android:layout_marginTop="20dp"
                android:textColor="@color/colorWhite"
                android:textSize="12dp"
                android:layout_below="@id/btlogin"
                android:text="@string/social"
                android:layout_centerHorizontal="true"
                android:layout_height="wrap_content" />

            <android.support.design.widget.FloatingActionButton
                android:layout_below="@id/labelsocial"
                android:layout_centerHorizontal="true"
                android:id="@+id/fabfacebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                app:backgroundTint="@color/colorDark"
                android:src="@drawable/ic_facebook"
                android:layout_marginTop="20dp"
                android:padding="0dp"
                app:elevation="10dp"
                android:scaleType="center" />
            <TextView
                android:id="@+id/labelfacebook"
                android:layout_width="wrap_content"
                android:textColor="@color/colorWhite"
                android:textSize="12dp"
                android:layout_below="@id/fabfacebook"
                android:layout_marginTop="5dp"
                android:text="@string/facebook"
                android:layout_centerHorizontal="true"
                android:layout_height="wrap_content" />


        </RelativeLayout>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>